Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -4057,6 +4057,7 @@ img {
 
 .phones {
     display: flex;
+    justify-content: center;
 }
 .button1 {
     background-color: red;
@@ -4072,6 +4073,9 @@ img {
 }
 body {
     background-image: url("http://1.bp.blogspot.com/-_3f_enidOBs/UwQDExE5fMI/AAAAAAAAH7A/-gb-oYNPPLg/s1600/outAnimation.gif");
+}
+body {
+    text-align: center;
 }</style></head>
     <body>
         <p class="congrats">Congratulations! You officially got a free new iPhone for being the 2,763rd customer! Put your name, hit enter, and select your iPhone!</p>
